crates/ox_content_ssg/src/html/tests/snapshots/ox_content_ssg__html__tests__rendering__generate_bare_html_escapes_title_but_keeps_content_raw.snap
---
source: crates/ox_content_ssg/src/html/tests/rendering.rs
expression: "super::snapshot_text(&html)"
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>&lt;script&gt;alert(1)&lt;/script&gt;</title>
</head>
<body>
<h1>Raw & ready</h1>
</body>
</html>
