crates/ox_content_ssg/src/html/tests/snapshots/ox_content_ssg__html__tests__rendering__generate_bare_page_escapes_metadata_but_keeps_injected_markup_raw.snap
---
source: crates/ox_content_ssg/src/html/tests/rendering.rs
expression: "super::snapshot_text(&generate_bare_page(&data))"
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Guide</title>
  <meta name="description" content="a &quot;quoted&quot; &amp; &lt;angled&gt; value">
  <meta property="og:description" content="a &quot;quoted&quot; &amp; &lt;angled&gt; value">
  <meta name="twitter:description" content="a &quot;quoted&quot; &amp; &lt;angled&gt; value">
  <meta property="og:site_name" content="Docs &amp; More">
  <meta property="og:type" content="website">
  <meta property="og:title" content="Guide">
  <meta name="twitter:card" content="summary_large_image">
  <meta name="twitter:title" content="Guide">
<meta name="raw" content="kept">
</head>
<body>
<p>body</p>
</body>
</html>
